2011-08-08	Franz Holzinger <franz@ttproducts.de>
	* move the call to set the detailsArray to the front because some Gateways need the data to make a verification

2011-05-24	Franz Holzinger <franz@ttproducts.de>
	* fix bug with wrong parameter encodage of success and failure links

2010-12-27	Franz Holzinger <franz@ttproducts.de>
	* Consider the vouchers as virtual products having VOUCHER as itemnumber
	* fill in $errorMessage in all error cases

2009-12-31	Franz Holzinger <franz@ttproducts.de>
	* The code is derived from franz's branch of paymentlib
	* This extension uses code from tt_products 2.9.0 and paymentlib_paypal 0.0.4
	* Initial upload
